Change btn-login hover behaviour
1. Change the background color to white
2. Change the color of the wording to dark-green

--- a/src/main/webapp/stylesheets/teammatesCommon.css
+++ b/src/main/webapp/stylesheets/teammatesCommon.css
@@ -622,7 +622,11 @@ input.inline {
 }
 
 .btn-login:focus,
-.btn-login:hover,
+.btn-login:hover {
+    color: darkgreen;
+    background-color: white;
+}
+
 .btn-login:active {
     color: #00FF00;
 }
